# MCP-J

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  check.stderr  context-strip.sh  test_net.py  test_net_local.py
.github/workflows/: audit.yml  fuzz.yml  release.yml
.jules/: bolt.md  sentinel.md
clients/vscode-mcp-j/: README.md  package-lock.json  package.json  tsconfig.json
clients/vscode-mcp-j/resources/: manifest.schema.json
clients/vscode-mcp-j/scripts/: dev-cycle.sh  reset-config.sh
clients/vscode-mcp-j/src/: extension.ts  securityPanel.ts
clients/vscode-mcp-j/src/common/: RingBuffer.ts
clients/vscode-mcp-j/src/test/: ringBuffer.test.ts
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALL.md  TROUBLESHOOTING.md
docs/security/: isolation_spec.md  threat_model.md
mcp-j-cli/: Cargo.toml
mcp-j-cli/src/: main.rs
mcp-j-engine/: Cargo.toml
mcp-j-engine/src/: fs_utils.rs  landlock_ruleset.rs  lib.rs  manifest.rs  seccomp_loop.rs  seccomp_sys.rs  supervisor.rs
mcp-j-proxy/: Cargo.toml
mcp-j-proxy/fuzz/: Cargo.toml
mcp-j-proxy/fuzz/fuzz_targets/: fuzz_target_1.rs  parse_rpc.rs
mcp-j-proxy/src/: lib.rs
mcp-j-proxy/tests/: bench_regex.rs  performance_test.rs  test_path_traversal.rs  test_shell_injection.rs
profiles/: node.json  python.json
tests/e2e/: Cargo.toml  e2e_manifest.json  malicious_agent.rs  run_tests.sh
