[workspace]
members = [
    "mcp-j-engine",
    "mcp-j-cli",
    "mcp-j-proxy",
]
resolver = "2"

[profile.release]
opt-level = "z"        # Optimize for size (aggressively)
lto = "fat"            # Whole-program Link Time Optimization
codegen-units = 1      # Disable parallel codegen for maximum compression
strip = "symbols"      # Strip all debug and panic symbol tables
panic = "abort"        # Drop stack-unwinding code (saves ~300KB)

