[package]
name = "mcp-j-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
mcp-j-engine = { path = "../mcp-j-engine" }
mcp-j-proxy = { path = "../mcp-j-proxy" }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
