[package]
name = "mcp-j-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
landlock = "0.4"
# seccomp-stream = { git = "https://github.com/firecracker-microvm/seccomp-stream" } # Unavailable
nix = { version = "0.29", features = ["fs", "process", "sched", "utsname", "mman", "uio", "ioctl"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "2.4"
libseccomp = "0.3"
