[package]
name = "mcp-j-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
landlock = "0.4"
# seccomp-stream = { git = "https://github.com/firecracker-microvm/seccomp-stream" } # Unavailable
nix = { version = "0.29.0", features = ["fs", "sched", "mount", "process", "signal", "user", "hostname", "socket", "uio", "ptrace"] }
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "2.4"
libseccomp = "0.4"
enumflags2 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
