[package]
name = "mcp-j-proxy-fuzz"

version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mcp-j-proxy]
path = ".."

[[bin]]
name = "parse_rpc"
path = "fuzz_targets/parse_rpc.rs"
test = false
doc = false

[workspace]
